1. Fixing emote bug that created emotes inside of emotes, rather than replacing existing ones inside an NPC 2. Implementing some z-indexing for the player, npcs, and objects 3. Moving the movement logic to it's own reusable method so that NPCs and objects can use it too

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,6 +37,12 @@ $tertiary-title-line-height     : 1.250;    // 20px
 
 /** MIXINS **/
 
+// Collision Debug
+@mixin collision-debug {
+    background-color: #FF0000;
+    opacity: 0;
+}
+
 // Font Size
 @mixin font-size ($sizeValue: 1) {
     font-size: ($sizeValue * 16) + px;
